--- a/src/css/radio.css
+++ b/src/css/radio.css
@@ -51,26 +51,26 @@ body {
 	margin: 0 auto;
 	font-family: Arial,Helvetica,sans-serif;
 	color: red;
-	background: #000 url('../img/radio_bgr.jpg') top center no-repeat;
+	background: #222 url('../img/radio_bgr.png') top center no-repeat;
 	position: relative;
 }
 
 #dialer {
 	position: relative;
-	width:20px;
-	height:38px;
+	width:9px;
+	height:32px;
 	background: transparent url('../img/dialer.png') 0 0 no-repeat;
 	left: 250px;
-	top: 188px;
+	top: 41px;
 }
 
 #tuning {
 	position: relative;
-	width:152px;
-	height:152px;
+	width:79px;
+	height:79px;
 	background: transparent url('../img/tuning.png') 0 0 no-repeat;
-	left: 130px;
-	top: 343px;
+	left: 790px;
+	top: 28px;
 	-webkit-transform: rotate(76deg); 
 	-moz-transform: rotate(76deg);	
 	-o-transform: rotate(76deg);
@@ -78,17 +78,18 @@ body {
 
 #volume {
 	position: relative;
-	width:82px;
-	height:82px;
+	width:81px;
+	height:81px;
 	background: transparent url('../img/volume.png') 0 0 no-repeat;
-	left: 385px;
-	top: 192px;
+	left: 790px;
+	top: 104px;
 	-webkit-transform: rotate(270deg); 
 	-moz-transform: rotate(270deg);	
 	-o-transform: rotate(270deg);
 }
 
 #shine {
+	display: none;
 	position: absolute;
 	width:145px;
 	height:38px;
