--- a/src/css/radio.css
+++ b/src/css/radio.css
@@ -49,7 +49,7 @@ ol, ul {
 body {
 	width: 1024px;
 	margin: 0 auto;
-	font-family: Arial,Helvetica,sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	color: red;
 	background: #222 url('../img/radio_bgr.png') top center no-repeat;
 	position: relative;
@@ -99,11 +99,30 @@ body {
 } 
 
 img { border: 0; }
-.song {
-  color: #eee;
-  margin-left: 180px;
-  width: 400px;
-  background: rgba(0,0,0,0.7);
+
+#song_metadata {
+  color: #111;
+  width: 404px;
+  height: 140px;
+  background: rgba(200,200,200,0.9);
   padding: 12px;
-  border-radius: 2px;
+  border-radius: 4px;
+  position: absolute;
+  top: 150px;
+  left: 180px;
+}
+
+#song_metadata h1 {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 1em;
+}
+
+#song_metadata .label {
+  margin-top: 12px;
+  color: #777;
+  font-weight: bold;
+  font-size: 10px;
 }
